# Shinobi

./: Cargo.toml
.github/: .lint.yml  dependabot.yml
.github/workflows/: lint.yml  test.yml
src/: main.rs
src/helpers/: mod.rs  regex.rs  session.rs  string.rs
src/parser/: anime.rs
