[package]
name = "shinobi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governor = "0.6.0"
html-escape = "0.2.13"
regex = {version = "1.10.2", features = ['std','perf']}
reqwest = "0.11.23"
tl = { version = "0.7.7"}
